# photons-to-power-laws

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/synthetic/: README.md
docs/: science_background.md
examples/: demo_summary.json  lightcurve.csv
scripts/: run_demo.py
src/grb_afterglow/: __init__.py  calibration.py  detection.py  fitting.py  lightcurve.py  photometry.py  plotting.py  synthetic.py  zeropoint.py
tests/: test_pipeline.py
