[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grb-afterglow"
version = "0.1.0"
description = "Photons to Power Laws: an open pipeline for GRB optical afterglow photometry and light-curve fitting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Photons to Power Laws contributors" }]
keywords = ["astronomy", "gamma-ray-bursts", "photometry", "astropy", "light-curve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "astropy>=5.3",
    "photutils>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
catalogs = ["astroquery>=0.4.6"]

[project.urls]
Homepage = "https://github.com/Harishik/photons-to-power-laws"
Issues = "https://github.com/Harishik/photons-to-power-laws/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
